C++ assignment/OOP345/Project/ms5/ms51/Milestone 5 1/errors.txt
AidMan.cpp:269:18: error: definition of implicitly-declared ‘sdds::AidMan::~AidMan()’
  AidMan::~AidMan()
                  ^
